--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ejs",
-  "dependencies": {},
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
+    "express": "^4.17.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-	"start:dev": "npx babel --watch src --out-dir build --presets react-app/prod & npm start"
+    "start:dev": "npx babel --watch src --out-dir build --presets react-app/prod & npm start"
   },
   "repository": {
     "type": "git",
